--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcsh 'Finance, Personal -- Fiction'
 - !lcsh 'World War, 1914-1918 -- United States -- Fiction'
 - !lcsh 'Short stories'
+- GITenberg
 title: 'The Beggar''s Purse: A Fairy Tale of Familiar Finance'
 url: http://www.gutenberg.org/ebooks/44327
